--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="width:170px">
 									<img class="km" src="topics/01-Logic/topic.png" width="100%" alt=""></div>
 						        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-8">
-									<span><p>In this section, on <strong>propositional calculus</strong>, we will discuss how we analyise <strong>statements</strong> and how to construct statements using <strong>logical operators</strong>.</p></span>
+									<span><p>In this section, on <strong>propositional calculus</strong>, we will discuss how we analyse <strong>statements</strong> and how to construct more complex statements using <strong>logical operators</strong>. This is basis on how computers (and sometimes humans) make decisions.</p></span>
 									<ul>
 										
 									</ul>
