--- a/topics/01-Logic/index.html
+++ b/topics/01-Logic/index.html
@@ -317,13 +317,15 @@
 	<div class="media-body">
 		<h4 class="media-heading kmheading">Practical 01 - Logic 1 - Truth Tables</h4>
 		<span><p>In our first (proper) practical we look at propositional logic using Python.</p></span>
-		<div></div>
+		<div><p><em>(Note: To reopen a notebook that you were working on in an earlier session of Colab, select <strong>Open Empty Notebook in Colab</strong>. Then use menu <strong>File-&gt;Open Notebook</strong> to open your notebook with your saved work.)</em></p></div>
 		<ul>
 			
 		</ul>
 		<ul class="pager">
 			
 		  	<li><a class="kmpill" href="http://colab.research.google.com/github/discretemathematics-202122/live/blob/main/topics/01-Logic/21-Practical_01_-_Logic_1_-_Truth_Tables/files/Practical_01_-_Logic_1_-_Truth_Tables.ipynb" >Open in Colab</a></li>
+			
+		  	<li><a class="kmpill" href="https://colab.research.google.com/#create=true" >Open Empty Notebook in Colab</a></li>
 			
 		  	<li><a class="kmpill" href="21-Practical_01_-_Logic_1_-_Truth_Tables/files/../../../00-Module_Introduction/31-Guide_to_the_Python_Colab_Practicals/00-31-Guide_to_the_Python_Colab_Practicals-Slides-Presentation.pdf" >Guide to Notebooks</a></li>
 			
@@ -339,13 +341,15 @@
 	<div class="media-body">
 		<h4 class="media-heading kmheading">Practical 02 - Logic 2 - Applications</h4>
 		<span><p>In this practical we study some problems using logic and python.</p></span>
-		<div></div>
+		<div><p><em>(Note: To reopen a notebook that you were working on in an earlier session of Colab, select <strong>Open Empty Notebook in Colab</strong>. Then use menu <strong>File-&gt;Open Notebook</strong> to open your notebook with your saved work.)</em></p></div>
 		<ul>
 			
 		</ul>
 		<ul class="pager">
 			
 		  	<li><a class="kmpill" href="http://colab.research.google.com/github/discretemathematics-202122/live/blob/main/topics/01-Logic/22-Practical_02_-_Logic_2_-_Applications/files/Practical_02_-_Logic_2_-_Applications.ipynb" >Open in Colab</a></li>
+			
+		  	<li><a class="kmpill" href="https://colab.research.google.com/#create=true" >Open Empty Notebook in Colab</a></li>
 			
 		  	<li><a class="kmpill" href="22-Practical_02_-_Logic_2_-_Applications/files/../../../00-Module_Introduction/31-Guide_to_the_Python_Colab_Practicals/00-31-Guide_to_the_Python_Colab_Practicals-Slides-Presentation.pdf" >Guide to Notebooks</a></li>
 			
