--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 						        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="width:170px">
 									<img class="km" src="topics/07-Recurrence_Relations/topic.png" width="100%" alt=""></div>
 						        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-8">
-									<span><p>This topic deals with recurrance relations and their application to recursion in programming.</p></span>
+									<span><p>This topic deals with recurrance relations and their application to recursion in programming. <br />(NOTE: we will not cover this topic this year, but are leaving the material here for your interest.)</p></span>
 									<ul>
 										
 									</ul>
